--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "css-loader": "^3.4.2",
     "fastclick": "^1.0.6",
+    "style-loader": "^1.1.3",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
@@ -18,6 +22,7 @@
     "@vue/cli-plugin-router": "^4.2.0",
     "@vue/cli-plugin-vuex": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
+    "style-resources-loader": "^1.3.3",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
